--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   csv: ^4.1.0
   theme_provider: ^0.4.0+1
   get: ^3.24.0
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
